package poderes;

public class PoderFuego implements IPower {

    public PoderFuego() {

    }

    public void lanzarLlamarada() {

    }

    @Override
    public void dispararPoder() {
        System.out.println("  fireball");
    }
}
