package poderes;

public class PoderHielo implements IPower {

    public PoderHielo() {

    }

    public void congelar() {

    }

    @Override
    public void dispararPoder() {
        System.out.println(" -- hielo * ");
    }
}
