package poderes;
public class PoderPiedras implements IPower {
    
    public  void tirarPiedras(){

    }

    @Override 
    public void dispararPoder(){
        System.out.println("0   O   O");
    }
}
