package poderes;

public class PoderRayo implements IPower {

    public PoderRayo() {

    }

    public void cargarEnergia() {

    }

    @Override
    public void dispararPoder() {
        System.out.println("-- Rayito --");
    }
}
