package poderes;

public class PoderSalud implements IPower{
    public PoderSalud(){

    }

    @Override 
    public void dispararPoder(){
        System.out.println("curacion + X");
    }
}
